--- a/TeaAndCoffe/TeaAndCoffe.csproj
+++ b/TeaAndCoffe/TeaAndCoffe.csproj
@@ -22,6 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\TeaAndCoffe_DataAccess\TeaAndCoffe_DataAccess.csproj" />
     <ProjectReference Include="..\TeaAndCoffe_Models\TeaAndCoffe_Models.csproj" />
     <ProjectReference Include="..\TeaAndCoffe_Utility\TeaAndCoffe_Utility.csproj" />
   </ItemGroup>
