--- a/TeaAndCoffee/appsettings.json
+++ b/TeaAndCoffee/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=TeaAndCoffe;Trusted_Connection=true;TrustServerCertificate=true;"
+    "DefaultConnection": "Server=localhost;Database=TeaAndCoffe;Trusted_Connection=true;TrustServerCertificate=true;"
   },
   "Logging": {
     "LogLevel": {
