--- a/TeaAndCoffee_Models/TeaAndCoffee_Models.csproj
+++ b/TeaAndCoffee_Models/TeaAndCoffee_Models.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="7.0.7" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TeaAndCoffee_Utility\TeaAndCoffee_Utility.csproj" />
+  </ItemGroup>
+
 </Project>
